# ScopetrexVGA

./: .gitignore  CMakeLists.txt  README.md  config.h
src/: main.cpp  main.h
